# phdays24

./: README.md  install.bat  install.sh
01_MLIR_gen/: CMakeLists.txt  main.cpp
02_MLIR_gen_pyvars/: CMakeLists.txt  build.bat  main.cpp
02_MLIR_gen_pyvars/include/: MLIRGen.h
03_MLIR_gen_if_else/: CMakeLists.txt  build.bat  main.cpp  script.py
03_MLIR_gen_if_else/include/: MLIRGen.h  py_ast.h
04_MLIR_gen_LLVM_IR/: CMakeLists.txt  build.sh  main.cpp
04_MLIR_gen_LLVM_IR/include/: MLIRGen.h
05_MLIR_gen_JIT/: CMakeLists.txt  build.bat  main.cpp
05_MLIR_gen_JIT/include/: MLIRGen.h
